; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_xpt2046.c_getRaw.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_xpt2046.c_getRaw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_cs_pin = common dso_local global i32 0, align 4
@PLATFORM_GPIO_LOW = common dso_local global i32 0, align 4
@CTRL_HI_X = common dso_local global i32 0, align 4
@CTRL_LO_DFR = common dso_local global i32 0, align 4
@CTRL_HI_Y = common dso_local global i32 0, align 4
@CTRL_LO_SER = common dso_local global i32 0, align 4
@PLATFORM_GPIO_HIGH = common dso_local global i32 0, align 4
@GPIO_STATUS_W1TC_ADDRESS = common dso_local global i32 0, align 4
@pin_num = common dso_local global i32* null, align 8
@_irq_pin = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @getRaw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @getRaw(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = call i32 (...) @ETS_GPIO_INTR_DISABLE()
  %6 = load i32, i32* @_cs_pin, align 4
  %7 = load i32, i32* @PLATFORM_GPIO_LOW, align 4
  %8 = call i32 @platform_gpio_write(i32 %6, i32 %7)
  %9 = load i32, i32* @CTRL_HI_X, align 4
  %10 = load i32, i32* @CTRL_LO_DFR, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @platform_spi_send_recv(i32 1, i32 8, i32 %11)
  %13 = load i32, i32* @CTRL_HI_X, align 4
  %14 = load i32, i32* @CTRL_LO_DFR, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @_readLoop(i32 %15, i32 255)
  %17 = load i32*, i32** %3, align 8
  store i32 %16, i32* %17, align 4
  %18 = load i32, i32* @CTRL_HI_Y, align 4
  %19 = load i32, i32* @CTRL_LO_DFR, align 4
  %20 = or i32 %18, %19
  %21 = call i32 @_readLoop(i32 %20, i32 255)
  %22 = load i32*, i32** %4, align 8
  store i32 %21, i32* %22, align 4
  %23 = call i32 @platform_spi_send_recv(i32 1, i32 8, i32 0)
  %24 = load i32, i32* @CTRL_HI_Y, align 4
  %25 = load i32, i32* @CTRL_LO_SER, align 4
  %26 = or i32 %24, %25
  %27 = call i32 @platform_spi_send_recv(i32 1, i32 8, i32 %26)
  %28 = call i32 @transfer16(i32 0)
  %29 = load i32, i32* @_cs_pin, align 4
  %30 = load i32, i32* @PLATFORM_GPIO_HIGH, align 4
  %31 = call i32 @platform_gpio_write(i32 %29, i32 %30)
  %32 = load i32, i32* @GPIO_STATUS_W1TC_ADDRESS, align 4
  %33 = load i32*, i32** @pin_num, align 8
  %34 = load i64, i64* @_irq_pin, align 8
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @BIT(i32 %36)
  %38 = call i32 @GPIO_REG_WRITE(i32 %32, i32 %37)
  %39 = call i32 (...) @ETS_GPIO_INTR_ENABLE()
  ret void
}

declare dso_local i32 @ETS_GPIO_INTR_DISABLE(...) #1

declare dso_local i32 @platform_gpio_write(i32, i32) #1

declare dso_local i32 @platform_spi_send_recv(i32, i32, i32) #1

declare dso_local i32 @_readLoop(i32, i32) #1

declare dso_local i32 @transfer16(i32) #1

declare dso_local i32 @GPIO_REG_WRITE(i32, i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @ETS_GPIO_INTR_ENABLE(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
